--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,26 +1,27 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+<div class="row">
+<div class="col-sm-5">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <div><%= f.label :email %><br />
-  <%= f.text_field :email, autofocus: true %></div>
+  <%= f.text_field :email, autofocus: true, :class => "form-control" %></div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
   <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+    <%= f.password_field :password, autocomplete: "off", :class => "form-control" %></div>
 
   <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+    <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %></div>
 
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+    <%= f.password_field :current_password, autocomplete: "off", :class => "form-control" %></div>
 
   <div><%= f.label :phone_num %><br />
-    <%= f.text_field :phone_num %></div>
+    <%= f.text_field :phone_num, :class => "form-control" %></div>
 
 
   <div><%= f.submit "Update" %></div>
@@ -31,3 +32,5 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %> | <%= link_to "Logout", destroy_user_session_path, :method => :delete %>
+</div>
+</div>
