--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,15 @@
-<h2>Sign up</h2>
+<h2>sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.text_field :email, autofocus: true %></div>
+  <div><%= f.label :phone_num %><br />
+  <%= f.text_field :phone_num, autofocus: true, :placeholder => "phone number", :class => "form-control" %></div>
 
   <div><%= f.label :password %><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-  <div><%= f.label :phone_num %><br />
-    <%= f.text_field :phone_num %></div>
-
-  <div><%= f.submit "Sign up" %></div>
+    <%= f.password_field :password, autocomplete: "off", :placeholder => "password", :class => "form-control" %></div>
+    <label>Submit</label>
+  <div><%= f.submit "Sign up", :class => "form-control" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
