--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,69 +1,63 @@
-	<!DOCTYPE html>
-	<html>
+<!DOCTYPE html>
+<html>
 	<head>
 		<title>HackMidwest</title>
 		<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 		<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 		<%= csrf_meta_tags %>
 	</head>
-	<body>
+<body>
 
-		<nav class="navbar navbar-default" role="navigation">
-			<div class="container-fluid">
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<%= link_to 'U:nifi', root_path, class: "navbar-brand" %>
-				</div>
+<nav class="navbar navbar-default" role="navigation">
+	<div class="container-fluid">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<%= link_to 'u:nify', root_path, class: "navbar-brand" %>
+		</div>
 
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav">
-						<li class="active"><a href="#"><%= Time.now %></a></li>
-						<li><a href="#"></a></li>
-						<li class="dropdown">
-							<li><%= link_to groups_path, groups_path %></li>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav">
+				<li><%= link_to '/about', home_about_path %></li>
+				<li><%= link_to groups_path, groups_path %></li>
+				<li><%= link_to events_path, events_path %></li>
+			</ul>
 
-							<li><%= link_to events_path, events_path %></li>
+			<ul class="nav navbar-nav navbar-right">
+				<% if user_signed_in? %>
+					<li><%= link_to 'cell: '+current_user.phone_num, edit_user_registration_path %></li>
+					<li><%= link_to 'settings', edit_user_registration_path %></li>
+					<li><%= link_to 'logout', destroy_user_session_path, :method => :delete %></li>
+				<% else %>
+					<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+				
+					<div class="form-inline">
+					<li><%= f.text_field :phone_num, :placeholder => "phone number", :class => "form-control inline" %></li>
+					<li><%= f.password_field :password, autocomplete: "off", :placeholder => "password", :class => "form-control inline" %></li>
+					<li><%= f.submit "Sign up", :class => "form-control" %></li>
+					</div>
+					<% end %>
 
-						</ul>
+				<% end %>
+			</ul>
+		</div><!-- /.navbar-collapse -->
+	</div><!-- /.container-fluid -->
+</nav>
 
-						<ul class="nav navbar-nav navbar-right">
-							<% if user_signed_in? %>
-								<li><%= link_to 'Cell: '+current_user.phone_num, edit_user_registration_path %></li>
-								<li><%= link_to 'Settings', edit_user_registration_path %></li>
-								<li><%= link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
-							
-							<% else %>
+<div class="container">
+	<%= yield %>
+	<p class="notice"><%= notice %></p>
+	<!-- <p class="alert"><%= alert %></p> -->
+	<hr>
+<a href="/"><%= Time.now %></a>
 
-							<li><%= link_to 'Login', new_user_session_path %></li>
-							<% end %>
-						</ul>
-					</li>
-				</ul>
-			</div><!-- /.navbar-collapse -->
-		</div><!-- /.container-fluid -->
-	</nav>
-
-
-
-
-
-
-
-	<div class="container">
-		<%= yield %>
-		<p class="notice"><%= notice %></p>
-		<!-- <p class="alert"><%= alert %></p> -->
-		<hr>
-	</div>
-	<script>
-	</script>
+</div>
 
 </body>
 </html>
