--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,8 +1,8 @@
 <!-- Nav tabs -->
 <div class="row">
 	<div class="col-sm-12">
-		<ul class="nav nav-pills" role="tablist">
-			<li class="active"><a href="#home" role="tab" data-toggle="tab">about</a></li>
+		<ul class="nav nav-pills nav-justified" role="tablist">
+			<li class="active"><a href="#about" role="tab" data-toggle="tab">about</a></li>
 			<li><a href="#examples" role="tab" data-toggle="tab">examples</a></li>
 			<li><a href="#team" role="tab" data-toggle="tab">our team</a></li>
 			<li><a href="#help" role="tab" data-toggle="tab">help</a></li>
@@ -12,7 +12,8 @@
 
 <!-- Tab panes -->
 <div class="tab-content">
-	<div class="tab-pane fade in active" id="home">
+	<div class="tab-pane fade in active" id="about">
+	<h1>about u:nify</h1>
 		<div class="row">
 			<div class="col-sm-3">
 				<h3>what is it</h3>
