--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,11 +16,13 @@
 
 
 	<div class="row">
-
+  <div class="container">
+    <h1 class="pull-right"><small>Set a date, we'll get everyone there</small></h1>
+    </div>
 		<div class="container" id="full-header">
-		<h1><!-- <img src="https://s3.amazonaws.com/HackMidwest/U-nifi-logo-black.png" height="100%" width="15%"> -->u:nify gps & txt organizer</h1>
+		<h1><img src="https://s3.amazonaws.com/HackMidwest/U-nifi-logo-black.png" height="100%" width="15%">u:nify gps & txt organizer </h1>
 		</div>
-		<hr>
+    <hr>
     <div class="row">
 			<div class="col-sm-6">
 				<table class="table table-striped">
