--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,15 +1,21 @@
-<h2>sign up</h2>
+<h1>registration, woohoo!</h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :phone_num %><br />
-  <%= f.text_field :phone_num, autofocus: true, :placeholder => "phone number", :class => "form-control" %></div>
+  <div><%= f.label :email %><br />
+  <%= f.text_field :email, autofocus: true, :placeholder => "email", :class => "form-control" %></div>
 
   <div><%= f.label :password %><br />
     <%= f.password_field :password, autocomplete: "off", :placeholder => "password", :class => "form-control" %></div>
+    <div><%= f.label :phone_num %><br />
+    <%= f.password_field :phone_num, :placeholder => "phone number (include area code)", :class => "form-control" %></div>
+
+
     <label>Submit</label>
   <div><%= f.submit "Sign up", :class => "form-control" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+<br>
+<p>* u:nify service only works for US numbers with texting capabilities</p>
