--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,26 +1,8 @@
-	<style type="text/css">
-		#map-canvas { height: 400px}
-
-		body, html { width:100% ;
-			height:100% ;
-			overflow:hidden ;
-		}
-
-		iframe { width:100% ;
-			height:100% ;
-			border:none ;
-		}
-
-	</style>
-
 
 
 	<div class="row">
-  <div class="container">
-    <h1 class="pull-right"><small>Set a date, we'll get everyone there</small></h1>
-    </div>
-		<div class="container" id="full-header">
-		<h1><img src="https://s3.amazonaws.com/HackMidwest/U-nifi-logo-black.png" height="100%" width="15%">u:nify gps & txt organizer </h1>
+  	<div class="container">
+		<h1><img src="https://s3.amazonaws.com/HackMidwest/U-nifi-logo-black.png" height="100%" width="10%">text & gps event admin tool</h1>
 		</div>
     <hr>
     <div class="row">
