--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	<%= csrf_meta_tags %>
+	<script src="http://d3js.org/d3.v3.min.js"></script>
+
 </head>
 <body>
 	<nav class="navbar navbar-default" role="navigation">
@@ -30,9 +32,8 @@
 
 				<ul class="nav navbar-nav navbar-right">
 					<% if user_signed_in? %>
-					<li><%= link_to 'cell: '+current_user.phone_num, edit_user_registration_path %></li>
-					<li><%= link_to 'settings', edit_user_registration_path %></li>
-					<li><%= link_to 'logout', destroy_user_session_path, :method => :delete %></li>
+					<li><%= link_to 'cell '+current_user.phone_num, edit_user_registration_path %></li>
+					<li><%= link_to '/logout', destroy_user_session_path, :method => :delete %></li>
 					<% else %>
 					<li><%= link_to 'sign in', new_user_session_path %></li>
 					<% end %>
@@ -43,17 +44,28 @@
 	</nav>
 
 	<div class="container">
+	<div class="well" style="opacity:.87">
 		<%= yield %>
 		<p class="notice"><%= notice %></p>
 		<!-- <p class="alert"><%= alert %></p> -->
 		<hr>
 		<a href="/"><%= Time.now %></a>
-
+		</div>
 	</div>
 
 <script>
 $('.dropdown-toggle').dropdown()
 </script>
+
+<script>
+$(document).ready(function(){
+
+	var t = new Trianglify({noiseIntensity: 0, strokeOpacity: Math.random(), fillOpacity: Math.random()});
+	var pattern = t.generate(window.innerWidth, window.innerHeight);
+	$('body').css({"background": pattern.dataUrl + " no-repeat center center fixed"} );
+})
+</script>
+
 </body>
 </html>
 
