--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,54 +1,60 @@
+<div class="inline pull-right" style="margin-top:-20px">
+  users <%= @users %> | groups <%= @groups %> | events <%= @events %> | alerts <%= @alerts %>
+</div>
+<div class="row">
+ <div class="container"><h1 class="inline" style="font-size:400%;font-family:Helvetica;font-weight:100;">u:nify </h1><h2 class="inline"><small>text & gps alerts</small></h2>
+ </div>
+</div>
+<div class="row">
+ <div class="col-sm-6">
+  <h2>registration, woohoo!</h2>
+
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <%= devise_error_messages! %>
+
+  <div><%= f.label :email %><br />
+    <%= f.text_field :email, autofocus: true, :placeholder => "email", :class => "form-control" %></div>
+
+    <div><%= f.label :password %><br />
+      <%= f.password_field :password, autocomplete: "off", :placeholder => "password", :class => "form-control" %></div>
+      <div><%= f.label :phone_num %><br />
+        <%= f.password_field :phone_num, :placeholder => "phone number (include area code)", :class => "form-control" %></div>
 
 
-	<div class="row">
-  	<div class="container">
-		<h1><img src="https://s3.amazonaws.com/HackMidwest/U-nifi-logo-black.png" height="100%" width="10%">text & gps event admin tool</h1>
-		</div>
-    <hr>
-    <div class="row">
-			<div class="col-sm-6">
-				<table class="table table-striped">
-					<tr>
-						<td>Number of users</td>
-						<td><%= @users %></td>
-					</tr>
-					<tr>
-						<td>Number of groups</td>
-						<td><%= @groups %></td>
-					</tr>
-					<tr>
-						<td>Number of events</td>
-						<td><%= @events %></td>
-					</tr>
-					<tr>
-						<td>
-							Number of alerts</td>
-						</td>
-						<td>
-							<%= @alerts %>
-						</td>
-					</tr>
-				</table>
-			</div>
-				<div class="col-sm-6">
-		</div>
+        <label>Submit</label>
+        <div><%= f.submit "Sign up", :class => "form-control" %></div>
+        <% end %>
 
-			</div>
+        <br>
+        <p>* u:nify service only works for US numbers with texting capabilities</p>
 
 
-			<script type="text/javascript">
-				var marker;
-				var map;
-				var user_location_marker;
 
-				var infobox;
-				var events;
+      </div>
+      <div class="col-sm-6">
+      <h2>maps or demos</h2>
+        Google maps of our users (cache this data once in a while)
+        <br>
+        <br>
+        Or, we could put pretty iphone demos. Sometimes maps doesn't load. Bad first impression
+      </div>
+
+    </div>
+
+
+    <script type="text/javascript">
+      var marker;
+      var map;
+      var user_location_marker;
+
+      var infobox;
+      var events;
 
   // initialize the map
   function initialize() {
     // set the user's location
     askForUserLocation();
-}
+  }
 
   // script that is called after the dom loads so we can load the app.
   function loadScript() {
@@ -57,18 +63,18 @@
   	script.src = 'https://maps.googleapis.com/maps/api/js?v=3.exp&' +
       'callback=initialize'; //this is the callback function 
       document.body.appendChild(script);
-  }
+    }
 
-  function askForUserLocation()
-  {
-  	if (navigator.geolocation) 
-  	{
-  		navigator.geolocation.getCurrentPosition(SetUserLocation, error, {maximumAge: 30000, timeout: 10000, enableHighAccuracy: true} );
-  	}
-  	else
-  	{
-  		alert("Sorry, but it looks like your browser does not support geolocation.");
-  	}
+    function askForUserLocation()
+    {
+     if (navigator.geolocation) 
+     {
+      navigator.geolocation.getCurrentPosition(SetUserLocation, error, {maximumAge: 30000, timeout: 10000, enableHighAccuracy: true} );
+    }
+    else
+    {
+      alert("Sorry, but it looks like your browser does not support geolocation.");
+    }
   }
 
   function updateMapWithEvents(data){
@@ -147,52 +153,52 @@
 
       //draw a circle around the latitude and longitude
       drawCircle(a_event.latLng);
+    }
   }
-}
 
-function panAndZoomToLocation(latLng, zoomLevel){
-	map.panTo(latLng);
-	map.setZoom(zoomLevel);
-}
+  function panAndZoomToLocation(latLng, zoomLevel){
+   map.panTo(latLng);
+   map.setZoom(zoomLevel);
+ }
 
-function generateEventInfoWindow(a_event){
-	var info = '<div id="content">'+
-	'<div id="siteNotice">'+
-	'</div>'+
-	'<h1 id="firstHeading" class="firstHeading">' + a_event.name + '</h1>'+
-	'<div id="bodyContent">'+
-	'<p><b>Description: </b>' + a_event.desc + '</p>' + 
-	'<p><b>Start Date/Time: </b> ' + a_event.start + '</p>' + 
-	'<p><b>End Date/Time: </b> ' + a_event.end + '</p>' + 
-	'</div>'+
-	'</div>';
+ function generateEventInfoWindow(a_event){
+   var info = '<div id="content">'+
+   '<div id="siteNotice">'+
+   '</div>'+
+   '<h1 id="firstHeading" class="firstHeading">' + a_event.name + '</h1>'+
+   '<div id="bodyContent">'+
+   '<p><b>Description: </b>' + a_event.desc + '</p>' + 
+   '<p><b>Start Date/Time: </b> ' + a_event.start + '</p>' + 
+   '<p><b>End Date/Time: </b> ' + a_event.end + '</p>' + 
+   '</div>'+
+   '</div>';
     // modify this to use the data from the object
     return info;
-}
+  }
 
-function drawCircle(latLong){
-	var eventRadiusOptions = {
-		strokeColor: '#00bdf5',
-		strokeOpacity: 0.8,
-		strokeWeight: 1,
-		fillColor: '#19a9e0',
-		fillOpacity: 0.35,
-		map: map,
-		center: latLong,
-		radius: 30
-	};
+  function drawCircle(latLong){
+   var eventRadiusOptions = {
+    strokeColor: '#00bdf5',
+    strokeOpacity: 0.8,
+    strokeWeight: 1,
+    fillColor: '#19a9e0',
+    fillOpacity: 0.35,
+    map: map,
+    center: latLong,
+    radius: 30
+  };
 
     // Add the circle for this city to the map.
     var eventCircle = new google.maps.Circle(eventRadiusOptions);
-}
+  }
 
-function error() {
-	alert("Cannot locate user");
-}
+  function error() {
+   alert("Cannot locate user");
+ }
 
-function buttonSelected(){
-	console.log("Button selected!!!");
-}
+ function buttonSelected(){
+   console.log("Button selected!!!");
+ }
 
   // A $( document ).ready() block.
   $( document ).ready(function() {
@@ -220,17 +226,17 @@ function buttonSelected(){
     if (response.status === 'connected') {
       // Logged into your app and Facebook.
       testAPI();
-  } else if (response.status === 'not_authorized') {
+    } else if (response.status === 'not_authorized') {
       // The person is logged into Facebook, but not your app.
       document.getElementById('status').innerHTML = 'Please log ' +
       'into this app.';
-  } else {
+    } else {
       // The person is not logged into Facebook, so we're not sure if
       // they are logged into this app or not.
       document.getElementById('status').innerHTML = 'Please log ' +
       'into Facebook.';
+    }
   }
-}
 
   // This function is called when someone finishes with the Login
   // Button.  See the onlogin handler attached to it in the sample
@@ -248,7 +254,7 @@ function buttonSelected(){
                           // the session
       xfbml      : true,  // parse social plugins on this page
       version    : 'v2.0' // use version 2.0
-  });
+    });
 
     // Now that we've initialized the JavaScript SDK, we call 
     // FB.getLoginStatus().  This function gets the state of the
@@ -266,7 +272,7 @@ function buttonSelected(){
     	statusChangeCallback(response);
     });
 
-};
+  };
 
   // Load the SDK asynchronously
   (function(d, s, id) {
@@ -305,7 +311,7 @@ function buttonSelected(){
 </script>
 
 <script>
-$(document).ready(function(){
-	$('#full-header').css({"background-color":Please.make_color()});
-})
+  $(document).ready(function(){
+   $('#full-header').css({"background-color":Please.make_color()});
+ })
 </script>
