--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,8 +8,9 @@
 
   <div><%= f.label :password %><br />
     <%= f.password_field :password, autocomplete: "off", :placeholder => "password", :class => "form-control" %></div>
-    <div><%= f.label :phone_num %><br />
-    <%= f.password_field :phone_num, :placeholder => "phone number (include area code)", :class => "form-control" %></div>
+    
+  <div><%= f.label :phone_num %><br />
+    <%= f.telephone_field :phone_num, :placeholder => "phone number (include area code)", :class => "form-control" %></div>
 
 
     <label>Submit</label>
