static content for about page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,11 +9,11 @@
   <div><%= f.label :password %><br />
     <%= f.password_field :password, autocomplete: "off", :placeholder => "password", :class => "form-control" %></div>
     <div><%= f.label :phone_num %><br />
-    <%= f.password_field :phone_num, :placeholder => "phone number (include area code)", :class => "form-control" %></div>
+    <%= f.text_field :phone_num, :placeholder => "phone number (include area code)", :class => "form-control" %></div>
 
 
     <label>Submit</label>
-  <div><%= f.submit "Sign up", :class => "form-control" %></div>
+  <div><%= f.submit "Sign up", :class => "btn btn-primary form-control" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
