--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,7 +22,7 @@
 
 
         <label>Submit</label>
-        <div><%= f.submit "Sign up", :class => "form-control" %></div>
+        <div><%= f.submit "sign up", :class => "btn btn-primary form-control" %></div>
         <% end %>
 
         <br>
