--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -13,90 +13,60 @@
 <!-- Tab panes -->
 <div class="tab-content">
 	<div class="tab-pane fade in active" id="about">
-	<h1>about u:nify</h1>
-		<div class="row">
-			<div class="col-sm-3">
-				<h3>what is it</h3>
-			</div>
-			<div class="col-sm-9" >
-				created in 2014 during HackMidwest by a few University of Missouri students, u:nify is the solution to keeping track of reminding and tallying attendance to meetings, chapters, and other group events.
-			</div>
-		</div>
+		<h1>about u:nify</h1>
+		<h3>what is u:nify?</h3>
+		created in 2014 during HackMidwest by a few University of Missouri students, u:nify is the solution to keeping track of reminding and tallying attendance to meetings, chapters, and other group events.
+		
+		<h3>is it free?</h3>
+		yeah. for now. these texts cost money to send, so we'll eventually charge just for the overhead we're taking on now. we're considering a $10 monthly subscription.
+		
+		<h3>why via text?</h3>
+		we want to use texting because it's universal and it's more personal, as these groups should be.
+		
+		<h3>why u no use capitals?</h3>
+		you're reading this fine. ask yourself why we still need capitalized sentences.
+		
 
+		<h3>how safe is my data?</h3>
+		few things here. (1) we don't see your data. (2) we don't sell your data. (3) your data is hidden behind a strong authentication process. and lastly (4) you're literally just a (phone) number to us, so it's very impersonal.
+		
+		<h3>who made this?</h3>
+		5 dudes who go to Mizzou. see the team tab for more detail
+	</div>
+	<div class="tab-pane fade" id="examples">
+		<h1>demos</h1>
+		beautiful iphone graphics
 
-		<div class="row">
-			<div class="col-sm-3">
-				<h3>is it free?</h3>
-			</div>
-			<div class="col-sm-9" >
-				yeah. for now. these texts cost money to send, so we'll eventually charge just for the overhead we're taking on now. we're considering a $10 monthly subscription.</div>
-			</div>
-
-			<div class="row">
-				<div class="col-sm-3" >
-					<h3>why via text?</h3>
-				</div>
-				<div class="col-sm-9" >
-				we want to use texting because it's universal and it's more personal, as these groups should be.
-				</div>
-			</div>
-
-			<div class="row" >
-				<div class="col-sm-3">
-					<h3>why u no use capitals?</h3>
-				</div>
-				<div class="col-sm-9" >
-					you're reading this fine. ask yourself why we still need capitalized sentences.</div>
-				</div>
-
-
-				<div class="row">
-					<div class="col-sm-3">
-						<h3>how safe is my data?</h3>
-					</div>
-					<div class="col-sm-9" >
-						few things here. (1) we don't see your data. (2) we don't sell your data. (3) your data is hidden behind a strong authentication process. and lastly (4) you're literally just a (phone) number to us, so it's very impersonal.
-					</div>  
-				</div>
-
-				<div class="row">
-					<div class="col-sm-3">
-						<h3>who made this?</h3>
-					</div>
-					<div class="col-sm-9" >
-						5 dudes who go to Mizzou. see the team tab for more detail
-					</div>
-				</div>
-			</div>
-			<div class="tab-pane fade" id="examples">..</div>
-			<div class="tab-pane fade" id="team">
+	</div>
+	<div class="tab-pane fade" id="team">
+	<h1>the creators</h1>
+		<h3>Collaborators</h3>
+		<ul>
+			<li>
 				Drew Wetherington
-			</div>
-			<div class="tab-pane fade" id="help">
-				<div class="row" >
-					<div class="col-sm-3">
-						<h3>lost password</h3>
-					</div>
-					<div class="col-sm-9">
-						enter your phone number and we'll send you a new password.
-					</div>
-				</div>
-				<div class="row" >
-					<div class="col-sm-3">
-						<h3>lost phone</h3>
-					</div>
-					<div class="col-sm-9">
-						log into this site and hit unsync account, we won't send texts to your phone anymore and will reset your confirmation code
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-3">
-						<h3>good god...</h3>
-					</div>
-					<div class="col-sm-9">
-						someone stole your phone and reset your password, for some diabolical reason. just call us and we'll straight up just delete your account. you can register again when you get your phone back.
-					</div>
-				</div>
+			</li>
+			<li>
+				Chris Dopuch
+			</li>
+			<li>
+				Chris Fulton
+			</li>
+		</ul>
+		<h3>Honorable mentions</h3>
+		<ul>
+			<li>
+				Georgi Angelov
 
-			</div>
-		</div>
+			</li>
+		</ul>
+	</div>
+	<div class="tab-pane fade" id="help">
+	<h1>help!</h1>
+		<h3>lost password</h3>
+		enter your phone number and we'll send you a new password.
+		<h3>lost phone</h3>
+		log into this site and hit unsync account, we won't send texts to your phone anymore and will reset your confirmation code
+		<h3>good god...</h3>
+		someone stole your phone and reset your password, for some diabolical reason. just call us and we'll straight up just delete your account. you can register again when you get your phone back.
+	</div>
+</div>
