--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -56,8 +56,10 @@
 		<ul>
 			<li>
 				Georgi Angelov
-
 			</li>
+			<li>
+				Pat McAvoy
+				</li>
 		</ul>
 	</div>
 	<div class="tab-pane fade" id="help">
