--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -31,13 +31,12 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Desc</th>
-      <th>Start</th>
-      <th>End</th>
-      <th>Location</th>
-      <th>Is public</th>
-      <th>Group ID</th>
+      <th>event</th>
+      <th>description</th>
+      <th>starts @</th>
+      <th>ends @</th>
+      <th>location</th>
+      <th>status</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -49,9 +48,20 @@
         <td><%= event.desc %></td>
         <td><%= event.start.strftime("%B %d, %Y at %I:%M %p"); %></td>
         <td><%= event.end.strftime("%B %d, %Y at %I:%M %p"); %></td>
-        <td><%= event.location %></td>
-        <td><%= event.is_public %></td>
-        <td><%= event.group_id %></td>
+        <td>
+        <% if event.location != nil and event.location .to_s != '' %>
+          <%= event.location %>
+          <% else %>
+            not specified
+          <% end %>
+          </td>
+        <td>
+        <% if event.is_public == true %>
+          <span class="label label-success">public</span>
+        <% else %>
+          <span class="label label-danger">private</span>
+        <% end %>
+        </td>
         
         <td><%= link_to 'Show', event %></td>
         <td><%= link_to 'Edit', edit_event_path(event) %></td>
