join leave group

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -39,8 +39,8 @@
 
 	</div>
 	<div class="tab-pane fade" id="team">
-	<h1>the creators</h1>
-		<h3>Collaborators</h3>
+	<h1>developers</h1>
+		<h3>collaborators</h3>
 		<ul>
 			<li>
 				Drew Wetherington
@@ -52,7 +52,7 @@
 				Chris Fulton
 			</li>
 		</ul>
-		<h3>Honorable mentions</h3>
+		<h3>honorable mentions</h3>
 		<ul>
 			<li>
 				Georgi Angelov
