--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   users <%= @users %> | groups <%= @groups %> | events <%= @events %> | alerts <%= @alerts %>
 </div>
 <div class="row">
- <div class="container"><h1 class="inline" style="font-size:400%;font-family:Helvetica;font-weight:100;">u:nify </h1><h2 class="inline"><small>text & gps alerts</small></h2>
+ <div class="container"><h1 class="inline" style="font-size:400%;font-family:Helvetica;font-weight:100;"><%= brand_name %> </h1><h2 class="inline"><small>text & gps alerts</small></h2>
  </div>
 </div>
 <div class="row">
