--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -22,4 +22,4 @@
 
 <%= render "devise/shared/links" %>
 <br>
-<p>* u:nify service only works for US numbers with texting capabilities</p>
+<p>* <%= BRAND_NAME %> service only works for US numbers with texting capabilities</p>
