--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -13,9 +13,9 @@
 <!-- Tab panes -->
 <div class="tab-content">
 	<div class="tab-pane fade in active" id="about">
-		<h1>about u:nify</h1>
-		<h3>what is u:nify?</h3>
-		created in 2014 during HackMidwest by a few University of Missouri students, u:nify is the solution to keeping track of reminding and tallying attendance to meetings, chapters, and other group events.
+		<h1>about <%= BRAND_NAME %></h1>
+		<h3>what is <%= BRAND_NAME %>?</h3>
+		created in 2014 during HackMidwest by a few University of Missouri students, <%= BRAND_NAME %> is the solution to keeping track of reminding and tallying attendance to meetings, chapters, and other group events.
 		
 		<h3>is it free?</h3>
 		yeah. for now. these texts cost money to send, so we'll eventually charge just for the overhead we're taking on now. we're considering a $10 monthly subscription.
