--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<%= link_to 'u:nify', root_path, class: "navbar-brand" %>
+				<%= link_to BRAND_NAME, root_path, class: "navbar-brand" %>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
