--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -12,32 +12,54 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name, :class => "form-control" %>
+    <label>name</label><br>
+    <%= f.text_field :name, :class => "form-control", :placeholder => "title of event" %>
   </div>
   <div class="field">
-    <%= f.label :desc %><br>
-    <%= f.text_field :desc, :class => "form-control" %>
+    <label>description</label><br>
+    <%= f.text_field :desc, :class => "form-control", :placeholder => "blerb" %>
   </div>
   <div class="field">
-    <%= f.label :start %><br>
-    <%= f.date_field :start, :class => "datepicker form-control" %>
+    <label>starts (check-in time)</label><br>
+    <%= f.datetime_select :start,  :order => [:month, :day, :year, :hour, :minute], :class => "datepicker form-control" %>
   </div>
   <div class="field">
-    <%= f.label :end %><br>
-    <%= f.date_field :end, :class => "datepicker form-control" %>
+    <label>ends (no more check-in after)</label>
+    <%= f.number_field :end, :class => " form-control", :min => 0, :step => 0.25, :placeholder => "event duration" %>
   </div>
   
   <div class="field">
-    <%= f.label :address %><br>
+    <label>location (google maps accurate)</label><br>
     <%= f.text_field :address, :class => "form-control" %>
   </div>
   <div class="field">
-    <%= f.label :is_public %><br>
-    <%= f.check_box :is_public, :class => "form-control" %>
+    <label>when to send alerts</label>
+    <select multiple class="form-control" name="alert_template">
+      <option value="2">initial, 1 day before, 3 hours before, start</option>
+      <option value="3">initial, 3 hours before, start</option>
+      <option value="4">initial and start</option>
+    </select>
   </div>
+  <div class="field">
+    <label>public event?</label> <label id="pub_label" class="label label-primary">private</label>
+    <%= f.check_box :is_public, :class => "form-control" %> 
+  </div>
+  
 
   <div class="actions">
-    <%= f.submit 'Create Event', :class => 'form-control' %>
+    <%= f.submit 'save', :class => 'btn btn-primary form-control' %>
   </div>
 <% end %>
+
+<script>
+  $('#event_is_public').click(function() {
+    if ($('#event_is_public').prop('checked')) {
+      $('#pub_label').html('public');
+    }
+    else
+    {
+     $('#pub_label').html('private'); 
+    }
+  });
+
+</script>
