--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -19,7 +19,8 @@
     <%= f.label :desc %><br>
     <%= f.text_field :desc, :class => "form-control" %>
   </div>
+  
   <div class="actions">
-    <%= f.submit 'create group', :class => "form-control" %>
+    <%= f.submit 'save', :class => "btn btn-primary form-control" %>
   </div>
 <% end %>
