--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -13,12 +13,14 @@
   <%= devise_error_messages! %>
 
   <div><%= f.label :email %><br />
-    <%= f.text_field :email, autofocus: true, :placeholder => "email", :class => "form-control" %></div>
+    <%= f.text_field :email, autofocus: true, :placeholder => "email", :class => "form-control" %>
+  </div>
 
     <div><%= f.label :password %><br />
-      <%= f.password_field :password, autocomplete: "off", :placeholder => "password", :class => "form-control" %></div>
+      <%= f.password_field :password, autocomplete: "off", :placeholder => "password", :class => "form-control" %>
+    </div>
       <div><%= f.label :phone_num %><br />
-        <%= f.password_field :phone_num, :placeholder => "phone number (include area code)", :class => "form-control" %></div>
+        <%= f.telephone_field :phone_num, :placeholder => "phone number (include area code)", :class => "form-control" %></div>
 
 
         <label>Submit</label>
@@ -32,7 +34,7 @@
 
       </div>
       <div class="col-sm-6">
-      <h2>maps or demos</h2>
+        <h2>maps or demos</h2>
         Google maps of our users (cache this data once in a while)
         <br>
         <br>
